Added social sharing stuff

--- a/less/layout.less
+++ b/less/layout.less
@@ -143,3 +143,8 @@ footer {
     -webkit-animation: spin 2s infinite linear;
             animation: spin 2s infinite linear;
 }
+
+.share-button {
+    line-height: initial;
+    margin-bottom: 20px;
+}
