--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,3 +1,10 @@
-<footer class="bg-[#444] text-white flex justify-center p-32 mt-64">
-    &copy; 2025 sense|making
+<footer>
+    &copy; sense|making 2025
 </footer>
+
+<style>
+    footer {
+        display: flex;
+        justify-content: center;
+    }
+</style>
