--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,17 +1,34 @@
----
-import { getCollection } from 'astro:content'
-const articles = await getCollection('articles')
----
-
-<header class="m-0 p-32 flex justify-between">
-    <img src="/logo_dark.png" alt="sense|making" class="w-250" />
-
-    <div>
-        <button class="btn" popovertarget="article-list" style="anchor-name:--article-anchor">
-            Articles
-        </button>
-        <ul class="dropdown dropdown-end menu rounded-box bg-base-100 shadow-sm" popover id="article-list" style="position-anchor:--article-anchor">
-            {articles.map(article => <li class="text-nowrap"><a href={`/articles/${article.data.slug}`}>{article.data.title}</a></li>)}
+<header>
+    <img src="/logo-hires.png" alt="Sense Making" />
+    <nav>
+        <ul>            
+            <li><a href="/articles">Articles</a></li>
         </ul>
-    </div>
+    </nav>
 </header>
+
+<style>
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        
+        padding: 1rem;    
+    }
+
+    ul {
+        list-style: none;
+        display: flex;
+        gap: 1rem;
+    }
+
+    img {
+        width: 50%;
+    }
+
+    @media (min-width: 768px) {
+        img {
+            width: 25%;
+        }
+    }
+</style>
