--- a/src/layouts/standard.astro
+++ b/src/layouts/standard.astro
@@ -1,22 +1,46 @@
 ---
-import '../styles/global.css'
-const { title } = Astro.props
+import '../reset.css'
+import '../global.css'
 
-import Header from '../components/header.astro'
-import Footer from '../components/footer.astro'
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
+
+type Props = {
+    title: string
+}
+
+const { title } = Astro.props
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.ico" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>		
-	</head>
-	<body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="generator" content={Astro.generator} />
+        <title>{title}</title>
+    </head>
+    <body>
         <Header />
-		<slot />
+        <main>
+            <slot />
+        </main>        
         <Footer />
-	</body>
+    </body>
 </html>
+
+<style>
+    html, body {
+        height: 100dvh;        
+    }
+
+    body {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    main {
+        flex: 1;        
+    }
+</style>
