--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,99 +1,14 @@
 ---
-import Button from "../components/Button.astro";
-import Textbox from "../components/Textbox.astro";
-import Standard from "../layouts/Standard.astro";
+import BaseLayout from '../layouts/BaseLayout.astro';
+import Hero from '../components/Hero.astro';
+import Approach from '../components/Approach.astro';
+import Contact from '../components/Contact.astro';
 ---
 
-<Standard title="sense|making: Software Simplified">
-	<div class="hero">
-		<h1>Software. Simplified.</h1>
-		<p>We make large scale software projects easy to manage.</p>
-	</div> 	
-
-	<section class="colour-d">
-		<h2>Evolutionary Architecture</h2>
-		<p>We are evolutionary architects and have assisted many clients make organisational scale technical changes moving towards small, simple, independent, robust distributed services that are easy to deploy.</p>
-	</section>
-
-	<section class="colour-e">
-		<h2>Personal Approach</h2>
-		<p>Our favoured approach is based on embedded expertise over documentary instruction. We focus closely on strategic technical decision making whilst working within teams to implement them in parallel with delivering product features.</p>
-	</section>
-
-	<section class="colour-f">
-		<h2>Product Focus</h2>
-		<p>The reason we are successful is that we have learned how to ensure techinical changes progress in line with business priorities. We develop a mindset where technical changes are not so big that they bring throughput to a halt but neither so small that they have no meaningful impact.</p>
-	</section>
-
-	<section class="contact">
-		<h2>Get in touch!</h2>
-		<div>
-			<Textbox label="Name" placeholder="Devy McDevFace" />
-			<Textbox label="Email" placeholder="devy@example.com" />
-			<Button>I'm in!</Button>
-		</div>
-	</section>
-
-</Standard>
-
-<style>
-	.hero {
-		margin: 3rem 0;
-		text-align: center;
-
-		> h1 {
-			margin-bottom: 2rem;
-		}
-		
-		> * {
-			max-width: 48rem;
-			margin: 0 auto 1rem auto;
-		}
-	}
-
-	section {
-		padding: 1rem 2rem;
-
-		> * {
-			max-width: 48rem;
-			margin: 0 auto 1rem auto;
-		}
-	}
-
-	.contact {
-		> div {
-			display: flex;
-			gap: 1rem;
-			justify-content: center;
-			flex-wrap: wrap;
-		}
-	}
-
-	.colour-a {
-		background-color: var(--colour-a);
-	}
-
-	.colour-b {
-		background-color: var(--colour-b);
-		color: var(--colour-base);
-	}
-
-	.colour-c {
-		background-color: var(--colour-c);
-		color: var(--colour-base);
-	}
-
-	.colour-d {
-		background-color: var(--colour-d);
-	}
-
-	.colour-e {
-		background-color: var(--colour-e);
-		color: var(--colour-base);
-	}
-
-	.colour-f {
-		background-color: var(--colour-f);
-		color: var(--colour-base);
-	}
-</style>
+<BaseLayout 
+  title="sense|making | Evolutionary Architecture for Legacy Systems"
+  description="sense|making - A software consultancy specializing in evolutionary architecture to transform complex legacy codebases.">
+  <Hero />
+  <Approach />
+  <Contact />
+</BaseLayout>
