--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -28,6 +28,7 @@ import SectionHeading from './SectionHeading.astro';
           <input 
             type="text" 
             id="name" 
+            name="name"
             required
           />
         </div>
@@ -36,6 +37,7 @@ import SectionHeading from './SectionHeading.astro';
           <input 
             type="email" 
             id="email" 
+            name="email"
             required
           />
         </div>
